--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok:1.18.4')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    //compile('mysql:mysql-connector-java')
-    compile('org.postgresql:postgresql')
+    compile('mysql:mysql-connector-java')
+    //compile('org.postgresql:postgresql')
+    compile('io.springfox:springfox-swagger2:2.9.2')
+    compile('io.springfox:springfox-swagger-ui:2.9.2')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
     
