--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,3 +45,6 @@ info.company.name=TaskCrudAppCreator
 info.company.goal=Our goal is to make the world a better place!
 info.company.email=tasks@crud.com
 info.company.phone=744489230
+
+# THYMELEAF CONFIGURATION
+spring.thymeleaf.mode=LEGACYHTML5
