--- a/build.gradle
+++ b/build.gradle
@@ -30,11 +30,12 @@ dependencies {
     compile('mysql:mysql-connector-java')
     //compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-mail')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('net.sourceforge.nekohtml:nekohtml:1.9.22')
     
     compile('io.springfox:springfox-swagger2:2.9.2')
     compile('io.springfox:springfox-swagger-ui:2.9.2')
     compile('com.google.code.gson:gson:2.8.5')
-    
     compile('org.springframework.boot:spring-boot-starter-actuator')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
