--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 # ADMIN CONFIGURATION
+admin.name=Adrian
 admin.mail=
 
 # SPRING ACTUATOR CONFIGURATION
