--- a/build.gradle
+++ b/build.gradle
@@ -27,8 +27,8 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     compileOnly('org.projectlombok:lombok:1.18.4')
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
-    compile('mysql:mysql-connector-java')
-    //compile('org.postgresql:postgresql')
+    //compile('mysql:mysql-connector-java')
+    compile('org.postgresql:postgresql')
     compile('org.springframework.boot:spring-boot-starter-mail')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('net.sourceforge.nekohtml:nekohtml:1.9.22')
